--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,8 +4,6 @@
     top: 2px;
 }
 
-
-
 .brand--purpledark{
     color: #0b035b;
 }
@@ -23,7 +21,7 @@ background-color: #0b035b;
     background-color: #041541;
 }
 
-.brand--lay{
+.brand--overlay{
     background-color: rgba(20, 40, 80, 0.5);
 }
 
@@ -456,138 +454,327 @@ Commom elements
 	cursor: pointer
 }
 
-/* progress bar */
-.progress{
-	background-color: #d8d8d8;
-	height: 25px;
-	width: 400px;
-    border-radius: 20px;
-    border: #ccc 4px solid;
+
+.search-form {
+	position: relative;
+	width: 100%;
+	margin-bottom: 25px;
 }
 
-.progress-done{
-background: linear-gradient(to left, #69d46d, #139707);
-width: 270px;
-height: 100%;
-border-radius: 20px;
-align-items: center;
-justify-content: center;
-display: flex;
-color: #fff;
-transition: 1s ease;
-
+.search-form input {
+	width: 100%;
+	height: 60px;
+	padding-left: 41px;
+	padding-right: 175px;
+	border: none;
+	border-radius: 80px;
+	font-size: 15px;
+	background: #d0d7db;
 }
 
-
-.progress-2{
-	background-color: #d8d8d8;
-	height: 25px;
-	width: 400px;
-    border-radius: 20px;
-    border: #ccc 4px solid;
+.search-form button {
+	position: absolute;
+	height: 60px;
+	min-width: 167px;
+	right: 0;
+	top: 0;
+	border: none;
+	border-radius: 80px;
+	color: #fff;
+	font-size: 15px;
+	background: #fc0254;
 }
 
-.progress-done-2{
-background: linear-gradient(to left, #69d46d, #139707);
-width: 290px;
-height: 100%;
-border-radius: 20px;
-align-items: center;
-justify-content: center;
-display: flex;
-color: #fff;
-transition: 1s ease;
+.blog-pagination a {
+	color: #6a7080;
+	font-size: 14px;
+	display: inline-block;
+	margin-right: 5px;
+	font-weight: 500;
 }
 
-
-
-.progress-3{
-	background-color: #d8d8d8;
-	height: 25px;
-	width: 400px;
-    border-radius: 20px;
-    border: #ccc 4px solid;
-}
-
-.progress-done-3{
-background: linear-gradient(to left, #c0b551, #d4b70d);
-width: 150px;
-height: 100%;
-border-radius: 20px;
-align-items: center;
-justify-content: center;
-display: flex;
-color: #fff;
-transition: 1s ease;
+.blog-pagination a:hover,
+.blog-pagination a.active {
+	color: #3c455f;
 }
 
 
 
-.progress-4{
-	background-color: #d8d8d8;
-	height: 25px;
-	width: 400px;
-    border-radius: 20px;
-    border: #ccc 4px solid;
+
+.player-section {
+	padding: 57px 53px;
 }
 
-.progress-done-4{
-background: linear-gradient(to left, #c0b551, #d4b70d);
-width: 235px;
-height: 100%;
-border-radius: 20px;
-align-items: center;
-justify-content: center;
-display: flex;
-color: #fff;
-transition: 1s ease;
+.player-box {
+	padding: 77px 121px 100px 81px;
+	border-radius: 24px;
+	background: #fff;
 }
 
-
-
-.progress-5{
-	background-color: #d8d8d8;
-	height: 25px;
-	width: 400px;
-    border-radius: 20px;
-    border: #ccc 4px solid;
+.player-box {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
 }
 
-.progress-done-5{
-background: linear-gradient(to left, #c0b551, #d4b70d);
-width: 200px;
-height: 100%;
-border-radius: 20px;
-align-items: center;
-justify-content: center;
-display: flex;
-color: #fff;
-transition: 1s ease;
+.wave-player-warp {
+	padding-top: 40px;
+	position: relative;
+	width: calc(100% - 382px);
 }
 
-
-.progress-6{
-	background-color: #d8d8d8;
-	height: 25px;
-	width: 400px;
-    border-radius: 20px;
-    border: #ccc 4px solid;
+.tarck-thumb-warp {
+	width: 382px;
 }
 
-.progress-done-6{
-background: linear-gradient(to left, #69d46d, #139707);
-width: 280px;
-height: 100%;
-border-radius: 20px;
-align-items: center;
-justify-content: center;
-display: flex;
-color: #fff;
-transition: 1s ease;
+.tarck-thumb {
+	max-width: 333px;
+	position: relative;
 }
 
+.tarck-thumb img {
+	border-radius: 22px;
+}
 
+.tarck-thumb .wp-play {
+	position: absolute;
+	width: 70px;
+	height: 70px;
+	left: calc(50% - 35px);
+	top: calc(50% - 35px);
+	border: none;
+	border-radius: 50%;
+	color: #fc0254;
+	background: #fff;
+}
 
+.tarck-thumb .wp-play:after {
+	position: absolute;
+	content: "";
+	left: calc(50% - 6px);
+	top: calc(50% - 8px);
+	font: normal normal normal 18px/1 FontAwesome;
+}
+
+.playing .tarck-thumb .wp-play:after {
+	position: absolute;
+	content: "";
+	left: calc(50% - 8px);
+	font: normal normal normal 18px/1 FontAwesome;
+}
+
+.wave-player-info h2 {
+	font-size: 48px;
+	font-weight: 600;
+}
+
+.wave-player-info p {
+	font-size: 14px;
+}
+
+.wavePlayer_controls {
+	padding-top: 20px;
+}
+
+#wavePlayer {
+	position: relative;
+}
+
+#currentTime {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	font-size: 14px;
+	color: #0a183d;
+	font-weight: 500;
+	background: #fff;
+	padding-right: 2px;
+}
+
+#clipTime {
+	position: absolute;
+	right: 10px;
+	top: 59px;
+	font-size: 14px;
+	color: #b8b8b8;
+	font-weight: 500;
+}
+
+.songs-details-section {
+	padding: 100px 38px 50px;
+	background: #f9fcfd;
+}
+
+.song-details-box {
+	margin-bottom: 30px;
+	overflow: hidden;
+}
+
+.song-details-box h3 {
+	margin-bottom: 50px;
+}
+
+.song-details-box ul {
+	list-style: none;
+	max-width: 310px;
+}
+
+.song-details-box ul li {
+	margin-bottom: 15px;
+	font-size: 14px;
+	line-height: 2;
+}
+
+.song-details-box ul strong {
+	float: left;
+	margin-right: 6px;
+	font-weight: 600;
+	color: #0a183d;
+}
+
+.song-details-box ul span {
+	display: block;
+	overflow: hidden;
+	color: #6a7080;
+}
+
+.song-details-box .single_player_container {
+	margin-top: 0;
+	padding-left: 0;
+}
+
+.artist-details img {
+	float: left;
+	width: 163px;
+	height: 163px;
+	margin-right: 30px;
+	border-radius: 50%;
+}
+
+.artist-details h5 {
+	margin-bottom: 5px;
+	padding-top: 10px;
+}
+
+.artist-details span {
+	display: block;
+	font-size: 12px;
+	color: #c3c4c9;
+	margin-bottom: 15px;
+}
+
+.artist-details .ad-text {
+	overflow: hidden;
+}
+
+.song-details-box .song-info-box img {
+	width: 60px;
+	height: 60px;
+	border-radius: 20px;
+	margin-right: 13px;
+}
+
+.song-details-box .song-info-box .song-info {
+	padding-top: 10px;
+}
+
+.song-details-box .song-info-box .song-info h4 {
+	font-size: 14px;
+}
+
+.song-details-box .song-info-box .song-info p {
+	font-size: 10px;
+}
+
+.song-details-box .song-item {
+	margin-bottom: 22px;
+}
+
+.song-details-box .player_controls_box {
+	width: 102px;
+}
+
+.song-details-box .player_button {
+	-webkit-transform: scale(0.7);
+	transform: scale(0.7);
+	-webkit-transform-origin: center;
+	transform-origin: center;
+	margin: 0 -5px;
+}
+
+.song-details-box .player_bars {
+	width: calc(100% - 102px);
+}
+
+.song-details-box .single_player {
+	padding: 14px 15px 0 0px;
+}
+
+.song-details-box .jp-current-time {
+	font-size: 10px;
+	right: -29px;
+	padding-top: 9px;
+}
+
+.song-details-box .middle .jp-current-time {
+	right: -5px;
+	padding: 9px 5px 0;
+}
+
+.song-details-box .jp-duration {
+	font-size: 10px;
+	bottom: -6px;
+}
+
+.similar-songs-section {
+	padding: 100px 33px;
+}
+
+.similar-songs-section h3 {
+	margin-bottom: 70px;
+	padding-left: 6px;
+}
+
+.similar-song {
+	padding: 0 6px;
+	margin-bottom: 35px;
+}
+
+.similar-song .ss-thumb {
+	border-radius: 41px;
+	margin-bottom: 22px;
+	min-width: 100%;
+}
+
+.similar-song h4 {
+	font-size: 20px;
+	margin-bottom: 5px;
+}
+
+.similar-song p {
+	font-size: 14px;
+}
+
+.similar-song .player_bars {
+	width: 100%;
+}
+
+.similar-song .jp-current-time {
+	padding-top: 10px;
+}
+
+.similar-song .jp-duration {
+	bottom: -25px;
+}
+
+.ss-controls {
+	padding: 15px 0 10px;
+}
+
+.ss-controls .songs-links {
+	padding-top: 0;
+	float: right;
+}
 
 /* buttons */
 
@@ -599,9 +786,9 @@ transition: 1s ease;
 	font-weight: 500;
 	min-width: 195px;
 	padding: 23px 20px;
-	border-radius: 5px;
+	border-radius: 50px;
 	text-transform: uppercase;
-	background: #b90e47;
+	background: #fc0254;
 	color: #fff;
 	line-height: normal;
 	cursor: pointer;
@@ -611,39 +798,6 @@ transition: 1s ease;
 .t-btn:hover {
 	color: #fff;
 }
-
-
-.boxed-btn3 {
-
-    background: #615CFD;
-    color: #fff;
-    display: inline-block;
-    padding: 14px 38px;
-    font-family: "Muli", sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    border: 0;
-    border: 1px solid transparent;
-    -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
-    border-radius: 0px;
-    text-align: center;
-    color: #fff !important;
-    text-transform: capitalize;
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-    cursor: pointer;
-  }
-  
-
-  .boxed-btn3:hover {
-    border: 1px solid #615CFD;
-    color: #615CFD !important;
-    background: transparent;
-  }
-  
 
 @media (min-width: 1200px) {
 	.container {
@@ -655,101 +809,3 @@ transition: 1s ease;
 
 
 
-
-/*---------------------
-    About Section
------------------------*/
-
-
-/* contact */
-.contact-option {
-    padding-top: 30px;
-}
-
-.contact-section {
-	background: #222222 !important;
-}
-
-
-
-.contact-text .ct-item {
-	overflow: hidden;
-	margin-bottom: 15px;
-}
-
-.contact-text .ct-item .ci-icon {
-	width: 74px;
-	height: 74px;
-	text-align: center;
-	line-height: 90px;
-	border-radius: 50%;
-	background: #393939;
-	float: left;
-	margin-right: 26px;
-}
-
-.contact-text .ct-item .ci-icon span {
-	color: #e32879;
-	font-size: 30px;
-}
-
-.contact-text .ct-item .ci-text {
-	overflow: hidden;
-	margin-top: 8px;
-}
-
-.contact-text .ct-item .ci-text ul li {
-	list-style: none;
-	font-size: 18px;
-	color: #ffffff;
-}
-
-.contact-text .ct-item .ci-text ul li span {
-	display: block;
-	color: #b3b3b3;
-}
-
-.contact-option h4 {
-	color: #ffffff;
-	font-weight: 700;
-	margin-bottom: 45px;
-}
-
-
-
-
-
-.portfolio_image_area .single_Portfolio .portfolio_hover {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 80%;
-    height: 100%;
-    text-align: center;
-  
-    -webkit-transform: translateX(-50%);
-    -moz-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-    opacity: 0;
-    overflow: hidden;
-  }
-
-  .portfolio_image_area .single_Portfolio .portfolio_hover h3 {
-    color: #fff;
-    font-size: 24px;
-    font-weight: 700;
-  }
-  
-
-  .portfolio_image_area .single_Portfolio:hover .portfolio_hover {
-    -webkit-transform: translateX(0%);
-    -moz-transform: translateX(0%);
-    -ms-transform: translateX(0%);
-    transform: translateX(0%);
-    opacity: 1;
-  }
