--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -500,6 +500,188 @@ Commom elements
 
 
 
+/* playlist end */
+
+.songs-section {
+	padding-bottom: 80px;
+}
+
+.song-item {
+	margin-bottom: 33px;
+}
+
+.song-info-box img {
+	float: left;
+	width: 85px;
+	height: 85px;
+	border-radius: 19px;
+	margin-right: 18px;
+}
+
+.song-info-box .song-info {
+	overflow: hidden;
+	padding-top: 20px;
+}
+
+.song-info-box .song-info h4 {
+	font-size: 20px;
+	margin-bottom: 4px;
+}
+
+.song-info-box .song-info p {
+	font-size: 14px;
+	margin-bottom: 0;
+}
+
+.songs-links {
+	text-align: right;
+	padding-top: 26px;
+}
+
+.songs-links a {
+	display: inline-block;
+	margin-left: 15px;
+	padding-top: 5px;
+}
+
+.single_player_container {
+	margin-top: 30px;
+	padding-left: 10px;
+}
+
+.single_player_container .jp-interface {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+}
+
+.player_bars {
+	width: calc(100% - 145px);
+	position: relative;
+	padding-top: 8px;
+}
+
+.player_controls_box {
+	width: 145px;
+}
+
+.player_controls>button:not(:last-of-type) {
+	margin-right: 4px;
+}
+
+.player_button {
+	position: relative;
+	width: 28px;
+	height: 28px;
+	background: #d0d7db;
+	border: none;
+	border-radius: 50%;
+	outline: none !important;
+	cursor: pointer;
+	-webkit-box-flex: 0;
+	-ms-flex: 0 0 auto;
+	flex: 0 0 auto;
+}
+
+.player_button::after {
+	display: block;
+	position: absolute;
+}
+
+.jp-play {
+	background: #fc0254;
+}
+
+.jp-play:after {
+	left: 9px;
+	top: 3px;
+	width: 11px;
+	height: 13px;
+	content: url(../img/icons/play.png);
+}
+
+.jp-state-playing .jp-play::after,
+.playing .jp-play::after {
+	top: 4px !important;
+	left: 7px !important;
+	content: url(../img/icons/pause.png);
+}
+
+.jp-prev:after {
+	top: 1px !important;
+	left: 6px !important;
+	content: url(../img/icons/back.png);
+}
+
+.jp-next:after {
+	top: 1px !important;
+	right: 7px !important;
+	content: url(../img/icons/next.png);
+}
+
+.jp-stop::after {
+	top: 10px;
+	left: 10px;
+	width: 8px;
+	height: 8px;
+	background: #475069;
+	content: "";
+}
+
+.jp-progress {
+	width: 100%;
+	cursor: pointer;
+}
+
+.jp-seek-bar {
+	height: 100%;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	background: transparent;
+	margin-bottom: -5px;
+}
+
+.jp-seek-bar>div {
+	height: 2px;
+	background: #d0d7db;
+}
+
+.jp-play-bar {
+	position: relative;
+	height: 100%;
+	background: #272727;
+	overflow: visible !important;
+}
+
+.jp-current-time {
+	position: absolute;
+	font-size: 14px;
+	color: #0a183d;
+	right: -40px;
+	top: 100%;
+	padding-top: 15px;
+	background: #fff;
+	z-index: 1;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.middle .jp-current-time {
+	right: -5px;
+	padding: 15px 5px 0;
+}
+
+.jp-duration {
+	position: absolute;
+	font-size: 14px;
+	color: #b8b8b8;
+	right: 0;
+	bottom: -16px;
+}
+
+/* ----------------
+Artest Page
+ -------------------*/
 
 .player-section {
 	padding: 57px 53px;
@@ -776,6 +958,217 @@ Commom elements
 	float: right;
 }
 
+/* ----------------
+Responsive
+ -------------------*/
+
+@media (min-width: 1200px) {
+	.container {
+		max-width: 1176px;
+	}
+}
+
+/* Medium screen : 992px. */
+
+@media only screen and (min-width: 1200px) and (max-width: 1360px) {
+	.header-right {
+		margin-left: 50px;
+	}
+	.main-menu li a {
+		margin-left: 25px;
+	}
+	.main-menu .sub-menu {
+		left: 25px;
+	}
+}
+
+/* Medium screen : 992px. */
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+	.header-section {
+		padding-left: 15px;
+		padding-right: 20px;
+	}
+	.header-right {
+		margin-left: 20px;
+	}
+	.main-menu li a {
+		margin-left: 15px;
+	}
+	.main-menu .sub-menu {
+		left: 15px;
+	}
+	.hr-img img {
+		min-width: 500px;
+		position: relative;
+	}
+	.sub-list {
+		padding: 70px 15px 50px 90px;
+	}
+	.category-section .section-title,
+	.playlist-section .section-title {
+		float: none;
+	}
+	.category-links,
+	.playlist-filter {
+		text-align: left;
+	}
+	.playlist-item {
+		padding: 0;
+	}
+	.player-box {
+		padding: 70px 80px 80px;
+	}
+	.similar-song {
+		margin-bottom: 70px;
+	}
+	.artist-details img {
+		float: none;
+		margin-bottom: 30px;
+	}
+	.contact-warp {
+		padding: 100px 15px 60px 40px;
+	}
+	.category-item {
+		margin: 0;
+	}
+	.category-section {
+		padding: 100px 0;
+	}
+}
+
+
+/*---------------------
+  Call To Section
+-----------------------*/
+
+.callto-section {
+	padding: 80px 0;
+	background: #000;
+	border-bottom: #ccc solid 2px;;
+}
+
+.ctc-text {
+	text-align: center;
+}
+
+.ctc-text h2 {
+	font-size: 45px;
+	color: #fff;
+	font-weight: 700;
+	margin-bottom: 20px;
+}
+
+.ctc-text p {
+	color: #fff;
+	margin-bottom: 45px;
+}
+
+.ctc-text .primary-btn.ctc-btn {
+	color: #fff ;
+	background: #e32879 ;
+	text-decoration: none;
+	list-style: none;
+}
+.primary-btn {
+	font-size: 16px;
+	color: #fff ;
+	background: #e32879 ;
+	display: inline-block;
+	font-weight: 700;
+	padding: 12px 30px 10px;
+	text-decoration: none;
+	list-style: none;
+}
+
+.ctc-text .primary-btn.ctc-btn:hover{
+    border: 1px solid #e32879;
+    color: #fff !important;
+    background: transparent !important;
+}
+
+/*---------------------
+  About Us Section
+-----------------------*/
+
+.about-us-section {
+	background: #fff;
+}
+
+.as-pic img {
+	width: 100% !important;
+	height:330px !important;
+	margin-top: 20px;
+	
+
+}
+
+.as-text {
+	padding-top: 30px;
+	padding-left: 20px;
+}
+
+.as-text.ap-text {
+	padding-top: 14px;
+}
+
+.as-text .section-title span {
+	text-align: left;
+	margin-bottom:-5px;
+	color: #e32879;
+}
+
+.as-text p {
+	color: #000;
+}
+
+.as-text p.f-para {
+	margin-bottom: 5px;
+	margin-top: -20px;
+}
+
+.as-text p.s-para {
+	margin-bottom: 37px;
+	
+}
+
+.as-text .about-counter .ac-item {
+	float: left;
+	margin-right: 48px;
+	position: relative;
+}
+
+.as-text .about-counter .ac-item:after {
+	position: absolute;
+	right: -20px;
+	top: 8px;
+	height: 65px;
+	width: 1px;
+	background: #393939;
+	content: "";
+}
+
+.as-text .about-counter .ac-item:last-child {
+	margin-right: 0;
+	padding-right: 0;
+}
+
+.as-text .about-counter .ac-item:last-child:after {
+	display: none;
+}
+
+.as-text .about-counter .ac-item h2 {
+	color: #e32879;
+	font-weight: 700;
+	margin-bottom: 10px;
+}
+
+.as-text .about-counter .ac-item p {
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	margin-bottom: 0;
+}
+
 /* buttons */
 
 
@@ -819,7 +1212,135 @@ Commom elements
 	}
 }
 
-/* Medium screen : 992px. */
+.soul{
+	background: #0a183d !important;
+
+}
+/* Preloder */
+
+#preloder {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 999999;
+	background: #000;
+}
+
+.loader {
+	width: 40px;
+	height: 40px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -13px;
+	margin-left: -13px;
+	border-radius: 60px;
+	animation: loader 0.8s linear infinite;
+	-webkit-animation: loader 0.8s linear infinite;
+}
+
+@keyframes loader {
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+		border: 4px solid #f44336;
+		border-left-color: transparent;
+	}
+	50% {
+		-webkit-transform: rotate(180deg);
+		transform: rotate(180deg);
+		border: 4px solid #673ab7;
+		border-left-color: transparent;
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
+		border: 4px solid #f44336;
+		border-left-color: transparent;
+	}
+}
+
+@-webkit-keyframes loader {
+	0% {
+		-webkit-transform: rotate(0deg);
+		border: 4px solid #f44336;
+		border-left-color: transparent;
+	}
+	50% {
+		-webkit-transform: rotate(180deg);
+		border: 4px solid #673ab7;
+		border-left-color: transparent;
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+		border: 4px solid #f44336;
+		border-left-color: transparent;
+	}
+}
+
+/* ----------------
+Contact page
+ -------------------*/
+
+ .map {
+	height: 100%;
+	background: #ddd;
+}
+
+.map iframe {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+}
+
+.contact-warp {
+	padding: 100px 53px 104px 78px;
+}
+
+.contact-warp p {
+	padding-top: 40px;
+	margin-bottom: 50px;
+}
+
+.contact-warp ul {
+	margin-bottom: 90px;
+	list-style: none;
+}
+
+.contact-warp ul li {
+	font-size: 14px;
+	color: #0a183d;
+	font-size: 14px;
+	margin-bottom: 15px;
+	font-weight: 500;
+}
+
+.contact-from input,
+.contact-from textarea {
+	width: 100%;
+	height: 57px;
+	padding: 0 38px;
+	border: none;
+	border-radius: 20px;
+	font-size: 14px;
+	font-weight: 500;
+	margin-bottom: 14px;
+	color: #626469;
+	background: #f5f6fa;
+	box-shadow: none;
+	outline: none;
+}
+
+.contact-from textarea {
+	resize: none;
+	padding: 24px 38px 10px;
+	height: 177px;
+	margin-bottom: 57px;
+}
 
 
 
