--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1069,6 +1069,7 @@ Responsive
 	background: #e32879 ;
 	text-decoration: none;
 	list-style: none;
+	border: none;
 }
 .primary-btn {
 	font-size: 16px;
@@ -1079,6 +1080,7 @@ Responsive
 	padding: 12px 30px 10px;
 	text-decoration: none;
 	list-style: none;
+	border: none;
 }
 
 .ctc-text .primary-btn.ctc-btn:hover{
