--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -942,7 +942,17 @@ color: #ffffff !important;
         
 
 }
-
+.tag{
+    margin-top:10px !important;
+}
+.img-fluid{
+    width: 100% !important;
+    height: 100% !important;
+}
+.img-fluidd{
+    width: 100% !important;
+    height: 100% !important;
+}
 }
 
 
