--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -950,8 +950,9 @@ color: #ffffff !important;
     height: 100% !important;
 }
 .img-fluidd{
-    width: 100% !important;
-    height: 100% !important;
+    width: 150px !important;
+   height: 100px !important;
+ 
 }
 }
 
