--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -835,7 +835,9 @@ color: #ffffff !important;
         margin-bottom: 20px !important;
       
     }
-    
+.soul{
+    background-color: #000 !important;
+}
     .sectt{
         font-size: 25px !important;
         line-height: 20px !important;
@@ -853,11 +855,11 @@ color: #ffffff !important;
         border-radius: 50px !important;
     }
     .headd{
-        font-size: 10px !important;
+        font-size: 5px !important;
         line-height: 20px !important;
     }
     .heaad{
-        font-size: 25px !important;
+        font-size:20px !important;
       margin-top: 40px !important;
     }
     
@@ -898,12 +900,44 @@ color: #ffffff !important;
         font-size: 15px !important;
         line-height: 25px !important;
         margin-top: 10px !important;
+    
       }
       .tope{
           font-size: 10px !important;
           margin-top: 5px !important;
-          line-height: 20px !important;
+   
       }
+      .tobee{
+        font-size: 15px !important;
+        line-height: 25px !important;
+        margin-top: 10px !important;
+        margin-left: 30px !important;
+      }
+      .topee{
+          font-size: 10px !important;
+          margin-top: 5px !important;
+          line-height: 20px !important;
+          margin-left: 30px !important;
+      }
+     .adsp{
+        font-size: 6px !important;
+        margin-top: 5px !important;
+        color: #fff !important;
+     }
+     .ads{
+        font-size: 12px !important;
+        line-height: 25px !important;
+        margin-top: 10px !important;
+        color: #fff !important;
+        margin-top: 25px !important;
+     }
+     .footer{
+         text-align: left !important;
+     }
+
+     .owl{
+        background-color: #000 !important;
+     }
 
 .car{
     
@@ -956,5 +990,3 @@ color: #ffffff !important;
  
 }
 }
-
-
