--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -845,6 +845,15 @@ color: #ffffff !important;
         margin-bottom: 10px !important;
       
     }
+    .edu{
+        font-size: 20px !important;
+        line-height: 20px !important;
+    }
+    .eduu{
+        font-size: 30px !important;
+        line-height: 20px !important;
+    }
+    
     
     .iimg{
         text-align: center !important;
@@ -855,11 +864,11 @@ color: #ffffff !important;
         border-radius: 50px !important;
     }
     .headd{
-        font-size: 5px !important;
+        font-size: 15px !important;
         line-height: 20px !important;
     }
     .heaad{
-        font-size:20px !important;
+        font-size:25px !important;
       margin-top: 40px !important;
     }
     
@@ -920,12 +929,12 @@ color: #ffffff !important;
           margin-left: 30px !important;
       }
      .adsp{
-        font-size: 6px !important;
+        font-size: 10px !important;
         margin-top: 5px !important;
         color: #fff !important;
      }
      .ads{
-        font-size: 12px !important;
+        font-size: 20px !important;
         line-height: 25px !important;
         margin-top: 10px !important;
         color: #fff !important;
