--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -802,14 +802,17 @@ color: #ffffff !important;
         justify-content: left !important;
         
     }
-
+    .headline{
+        font-size: 20px !important;
+        line-height: 25px !important;
+    }
     .news p{
         font-size: 14px !important;
-        line-height: 35px !important;
+        line-height: 25px !important;
     }
 
     .news h5{
-        font-size: 13px !important;
+        font-size: 10px !important;
     }
     .imge{
         width: 100% !important;
@@ -997,5 +1000,31 @@ color: #ffffff !important;
     width: 150px !important;
    height: 100px !important;
  
+}
+.blogg{
+    width: 100px !important;
+    height: 100px !important;
+}
+.blt{
+    margin-top: -120px !important;
+    margin-left: 90px !important;
+    font-size: 15px !important;
+}
+    .blp{
+        margin-top: -5px !important;
+        margin-left: 90px !important;
+        text-align: left !important;
+         font-size: 10px !important;
+        
+    }
+    .blt a{
+        color: #000 !important;
+    }
+
+.articles{
+    margin-top: 100px!important;
+}
+.othernews{
+    font-size: 20px !important;
 }
 }
