--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1279,6 +1279,11 @@ dium screen : 992px. */
 		
 }
 
+.date{
+	margin-top: -30px !important;
+	font-size: 17px !important;
+	margin-bottom:  20px !important;
+}
 
 
 .img-fluidd {
