--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1265,7 +1265,7 @@ dium screen : 992px. */
 	}
 	
 .soul{
-	background: #0a183d !important;
+	background: #000 !important;
 
 }
 .tobe{
@@ -1314,7 +1314,7 @@ dium screen : 992px. */
 }
 
 .soul{
-	background: #0a183d !important;
+	background: #000 !important;
 	align-items: center;
 
 }
