nav-link changes

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1276,7 +1276,10 @@ dium screen : 992px. */
 	align-items: center !important;	
 		
 }
-
+.nav-link{
+	font-size: 26px;
+   font-weight: 100;
+}
 .tope{
 		align-items: center !important;	
 		
